force-app/main/default/objects/Lead/fields/cCheckBox__c.field-meta.xml
<CustomField>
    <fullName>cCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by DataForce</description>
    <label>cCheckBox</label>
    <type>Checkbox</type>
</CustomField>