force-app/main/default/objects/Lead/fields/cDate__c.field-meta.xml
<CustomField>
    <fullName>cDate__c</fullName>
    <description>Created by DataForce</description>
    <label>cDate</label>
    <type>Date</type>
</CustomField>