force-app/main/default/objects/Lead/fields/cDatetime__c.field-meta.xml
<CustomField>
    <fullName>cDatetime__c</fullName>
    <description>Created by DataForce</description>
    <label>cDatetime</label>
    <type>DateTime</type>
</CustomField>