force-app/main/default/objects/Lead/fields/cEmail__c.field-meta.xml
<CustomField>
    <fullName>cEmail__c</fullName>
    <description>Created by DataForce</description>
    <label>cEmail</label>
    <type>Email</type>
</CustomField>