force-app/main/default/objects/Lead/fields/cPercent__c.field-meta.xml
<CustomField>
    <fullName>cPercent__c</fullName>
    <description>Created by DataForce</description>
    <label>cPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>