force-app/main/default/objects/Lead/fields/cPhone__c.field-meta.xml
<CustomField>
    <fullName>cPhone__c</fullName>
    <description>Created by DataForce</description>
    <label>cPhone</label>
    <type>Phone</type>
</CustomField>