force-app/main/default/objects/Lead/fields/cPicklist__c.field-meta.xml
<CustomField>
    <fullName>cPicklist__c</fullName>
    <description>Created by DataForce</description>
    <label>cPicklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>d</fullName>
            </value>
            <value>
                <fullName>e</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>