force-app/main/default/objects/Lead/fields/cPicklistMulti__c.field-meta.xml
<CustomField>
    <fullName>cPicklistMulti__c</fullName>
    <description>Created by DataForce</description>
    <label>cPicklistMulti</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>