force-app/main/default/objects/Lead/fields/cText__c.field-meta.xml
<CustomField>
    <fullName>cText__c</fullName>
    <description>Created by DataForce</description>
    <label>cText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>