force-app/main/default/objects/Lead/fields/cTextEncrypted__c.field-meta.xml
<CustomField>
    <fullName>cTextEncrypted__c</fullName>
    <description>Created by DataForce</description>
    <label>cTextEncrypted</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>