force-app/main/default/objects/Lead/fields/cTextLong__c.field-meta.xml
<CustomField>
    <fullName>cTextLong__c</fullName>
    <description>Created by DataForce</description>
    <label>cTextLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>