force-app/main/default/objects/Lead/fields/cURL__c.field-meta.xml
<CustomField>
    <fullName>cURL__c</fullName>
    <description>Created by DataForce</description>
    <label>cURL</label>
    <type>Url</type>
</CustomField>